Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ jobs:
     inputs:
       provider: azurerm
       command: init
+      commandOptions: '-upgrade'
       workingDirectory: '$(System.DefaultWorkingDirectory)/'
       backendServiceArm: 'vinod service connection2'
       backendAzureRmResourceGroupName: 'rg_rohit'
